feat [docs]: rota /sales documentada e testada com sucesso
