# routes/sale.route.js
@@ -11,8 +11,8 @@ const byId = [verifyId, Sale.getSales];
 const remove = [verifyId, Sale.remove];
 const update = [verifyId, verifySaleEntry, Sale.update];
 
-router.get('/', useRescue(Sale.getSales));
 router.post('/', useRescue(create));
+router.get('/', useRescue(Sale.getSales));
 router.get('/:id', useRescue(byId));
 router.put('/:id', useRescue(update));
 router.delete('/:id', useRescue(remove));
